meeting C  overflow fixed

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -7,7 +7,7 @@ main {
 section {
   min-height: calc(100vh - 61.6px - 61px);
   width: 100%;
+  height: 100%;
   overflow-x: hidden;
-  padding-bottom: 100px;
   overflow-y: auto;
 }
