--- a/client/src/app/shared/footer/footer.component.scss
+++ b/client/src/app/shared/footer/footer.component.scss
@@ -3,6 +3,7 @@ footer {
   background-color: #2699fb;
   height: 61px;
   position: relative;
+  margin-top: 50px;
 }
 
 footer .copyRight {
