--- a/client/src/app/teacher/meetings/create-meeting/create-meeting.component.scss
+++ b/client/src/app/teacher/meetings/create-meeting/create-meeting.component.scss
@@ -1,112 +1,70 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.meetingsContainer {
+  width: 100%;
   height: calc(100vh - 61.6px - 61px);
-  padding: 0;
-}
-.form {
-  width: 100vw;
-  height: 100%;
-}
-
-.topBox {
-  flex-basis: 50%;
-  height: 50%;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  padding: 20px;
-  background-color: #fff;
-
-  overflow: hidden;
+  flex-direction: column;
+  // overflow-y: hidden;
 }
-.topBox h2 {
+
+h2 {
   color: #2699fb;
   font-weight: normal;
+  // margin-top: 61px;
+  margin-bottom: 41px;
 }
-::placeholder {
-  color: #2699fb;
+.title {
+  margin: 10px 0;
 }
-.topBox select,
-.topBox input {
+form {
+  width: 80%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  // background-color: purple;
+}
+
+form select,
+form input {
   direction: rtl;
   width: 100%;
   border: 1px solid #2699fb;
   padding: 10px;
   background-color: #fff;
   color: #2699fb;
-  margin-top: 15px;
+  margin: 15px 0;
 }
-.errorMessage {
-  color: red;
-  font-size: 12px;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 15px;
-}
-.topBox .meetingDetails {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.mettingsTime {
   width: 100%;
-  justify-content: space-around;
-}
-.topBox .meetingDetails .mettingDateTime {
   display: flex;
   justify-content: space-between;
-  width: 100%;
-  color: #2699fb;
-  margin-top: 10px;
 }
-.mettingDateTime input {
-  width: 100%;
-}
-.bottomBox {
-  flex-basis: 50%;
-  background-color: #eee;
-  width: 100%;
-  height: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  //   justify-content: space-around;
-  //   margin-top: 15px;
-  overflow: hidden;
-}
-
-.meetStart,
-.meetEnd {
+.mettingsTime .meetStart,
+.mettingsTime .meetEnd {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 45%;
+  width: 25%;
   height: 50px;
-  color: #2699fb;
 }
-.bottomBox textarea {
-  width: 75%;
-  height: 85px;
-  direction: rtl;
+.mettingsTime input {
+  width: 100%;
+}
 
-  border: 2px solid #2699fb;
-}
 .activitiesContainer {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
-  overflow: hidden;
+  margin: 35px 0;
 }
-.bottomBox button {
-  margin: 10px;
-  width: 75%;
-  margin: 20px 0;
-}
-form {
-  width: 100%;
-  overflow-x: hidden;
+.activitiesContainer textarea {
+  width: 65%;
+  height: 35%;
+  margin: 10px 0;
+  direction: rtl;
+  border: 2px solid #2699fb;
 }
